doc:learn dom and bom

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>这是二级标题</h2>
     <h1>这是一级</h1>
     <p>1234</p>
-    <p>hhh</p>
-    <p>又水了一天</p>
+    <p id="123">hhh</p>
+
 </body>
 </html> 
