--- a/index.html
+++ b/index.html
@@ -107,5 +107,11 @@
     </div>
 
 
+    <iframe src="http://www.baidu.com" frameborder="0" width="600" height="1000"></iframe>
+    <br>
+
+    <textarea name="aa" id="1234"></textarea>
+
+
 </body>
 </html> 
