--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
             color: red;
         }
 
+        p {
+            color: green;
+        }
 
+        #test_id {
+            color: blue;
+        }
+
+        * {
+            margin: 0;
+        }
     </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
     <div class = 'first'>类选择器</div>
-    <div style="color: red;">内联写法</div>
-    
+    <p>这是一段文本</p>
+    <div id="test_id">id选择器</div>
 </body>
 </html>
