--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style> 
+        /* * {
+            margin: 0;
+        } */
+        .first {
+            border: 1px solid red;
+        }
+
+        .second {
+            border: 1px solid green;
+            height: 40px;
+            padding: 5px;
+        }
+    </style>
 </head>
-<body>
-    
+<body> 
+    <div class="first">123</div>
+    <div class="second">123456</div>
+    <p>这是一个 <span>内联</span> 元素的例子。</p>
 </body>
 </html>
