feat:overflow_text

--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
             height: 40px;
             padding: 5px;
         }
+        .long-text {
+            border: 1px solid red;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: inherit;
+            width: 200px;
+        }
     </style>
 </head>
 <body> 
     <div class="first">123</div>
     <div class="second">123456</div>
     <p>这是一个 <span>内联</span> 元素的例子。</p>
+    <br>
+    <br>
+    <div class="long-text">
+        hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+    </div>
 </body>
 </html>
