feat:add flex.html

--- a/flex.html
+++ b/flex.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .baifenbai {
-            height: 100%;
+        .block {
+            background-color: blue;
         }
-
-        html  {
-            /* height: 100%; */
-            margin: 0;
+        .red {
+            background-color: red;
         }
-
     </style>
 </head>
 <body>
-    <div class="baifenbai">1</div>
+    <div class="block red">1</div>
+    <div class="block red">2</div>
 </body>
 </html>
