--- a/flex.html
+++ b/flex.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        .content {
+            display: flex;
+            /* flex-direction: column; */
+            justify-content: space-around;
+        }
         .block {
             background-color: blue;
+            color: white;
+            margin: 40px;
+            height: 100px;
+            width: 100px;
+            border: 2px solid black;
         }
         .red {
             background-color: red;
@@ -14,7 +24,11 @@
     </style>
 </head>
 <body>
-    <div class="block red">1</div>
-    <div class="block red">2</div>
+    <div class="content">
+        <div class="block">1</div>
+        <div class="block">2</div>
+        <div class="block">3</div>
+    </div>
+
 </body>
 </html>
