feat:learn flex

--- a/flex.html
+++ b/flex.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, 教程, 学习"> <!-- 网页的关键词 -->
+    <meta name="author" content="张三"> <!-- 网页的作者信息 -->
     <title>Document</title>
     <style>
         .content {
