--- a/flex.html
+++ b/flex.html
@@ -11,6 +11,7 @@
             display: flex;
             /* flex-direction: column; */
             justify-content: space-around;
+            color: black;
         }
         .block {
             background-color: blue;
@@ -19,6 +20,7 @@
             height: 100px;
             width: 100px;
             border: 2px solid black;
+            
         }
         .red {
             background-color: red;
