--- a/flex.html
+++ b/flex.html
@@ -11,7 +11,7 @@
             display: flex;
             /* flex-direction: column; */
             justify-content: space-around;
-            color: black;
+            border: 2px solid black;
         }
         .block {
             background-color: blue;
