fix:white-space:noswrap

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         .long-text {
             border: 1px solid red;
             text-overflow: ellipsis;
-            /* overflow: hidden; */
-            /* white-space: inherit; */
+            overflow: hidden;
+            white-space: nowrap;
             width: 200px;
         }
     </style>
