feat:learn style

--- a/style.html
+++ b/style.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <div class="title">的爱的发声刚刚流口水支持效率你</div>
+    <div class="title">aaaaa</div>
 </body>
-</html>
+</html> 
