--- a/style.html
+++ b/style.html
@@ -11,11 +11,16 @@
 
         .title {
             color: var(--primary-color);
+            height: 400px;
+            width: 400px;
+            border: 5px solid red;
+            border-radius:50%;
         }
     </style>
 </head>
 <body>
     <div class="title">aaaaa</div>
     <br>
+    <img src="images/background.jpg" alt="图片未找到">
 </body>
 </html> 
