feat:learn radius

--- a/style.html
+++ b/style.html
@@ -16,11 +16,19 @@
             border: 5px solid red;
             border-radius:50%;
         }
+
+        img {
+
+            height: 400px;
+            width: 400px;
+  
+            border-radius:50%;
+        }
     </style>
 </head>
 <body>
     <div class="title">aaaaa</div>
     <br>
-    <img src="images/background.jpg" alt="图片未找到">
+    <img src="images/background.jpg" alt="图片未找到" >
 </body>
 </html> 
