feat:learn shadow

--- a/style.html
+++ b/style.html
@@ -21,8 +21,8 @@
 
             height: 400px;
             width: 400px;
-  
-            border-radius:50%;
+            box-shadow: 3px 3px 300px rgba(0,0,0,0.5);
+            border-radius:200px;
         }
     </style>
 </head>
