feat:learn font

--- a/style.html
+++ b/style.html
@@ -10,6 +10,7 @@
         }
 
         .title {
+            font-family: 'dyh';
             color: var(--primary-color);
             height: 400px;
             width: 400px;
@@ -24,10 +25,15 @@
             box-shadow: 3px 3px 300px rgba(0,0,0,0.5);
             border-radius:200px;
         }
+
+        @font-face {
+            font-family: 'dyh';  
+            src: url(./assets/SmileySans-Oblique.ttf);
+        }
     </style>
 </head>
 <body>
-    <div class="title">aaaaa</div>
+    <div class="title">得意黑</div>
     <br>
     <img src="images/background.jpg" alt="图片未找到" >
 </body>
