feat:learn position

--- a/position.html
+++ b/position.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     .where {
-        position:static;
+        position: relative;
         background-color: cadetblue;
         width: 100px;
         height: 100px;
