feat:learn position-fixed

--- a/position.html
+++ b/position.html
@@ -7,19 +7,19 @@
 </head>
 <style>
     .where {
-        position: absolute;
+        position: fixed;
         background-color: cadetblue;
         width: 100px;
         height: 100px;
-        top: 100px;
-        left: 100px;
+        top: 0px;
+        left: 10px;
     }
 
     .container {
         font-family: 'dyh';
         border: 10px solid red;
         margin: 10px;
-        height: 400px;
+        height: 4000px;
 
     }
     @font-face {
