feat:learn position-sticky

--- a/position.html
+++ b/position.html
@@ -7,10 +7,10 @@
 </head>
 <style>
     .where {
-        position: fixed;
+        position: sticky;
         background-color: cadetblue;
-        width: 100px;
-        height: 100px;
+        /* width: 100px; */
+        /* height: 100px; */
         top: 0px;
         left: 10px;
     }
