feat:learn layer

--- a/layer.html
+++ b/layer.html
@@ -12,7 +12,7 @@
     .block {
         height: 100px;
         width: 100px;
-        background-color: blue;
+
 
     }
     .blue {
@@ -20,6 +20,9 @@
     }
     .red {
         background-color: red;
+        position: relative;
+        bottom: 50px;
+        left: 50px;
     }
 
 </style>
