feat:learn layer

--- a/layer.html
+++ b/layer.html
@@ -23,11 +23,19 @@
         position: relative;
         bottom: 50px;
         left: 50px;
+        z-index: 1;
+    }
+    .green {
+        background-color: green;
+        position: relative;
+        bottom: 100px;
+        left: 100px;
     }
 
 </style>
 <body>
     <div class="block blue"></div>
     <div class="block red"></div>
+    <div class="block green"></div>
 </body>
 </html>
