feat:learn layer

--- a/layer.html
+++ b/layer.html
@@ -17,6 +17,8 @@
     }
     .blue {
         background-color: blue;
+        position: relative;
+        z-index:2 ;
     }
     .red {
         background-color: red;
