--- a/rem.html
+++ b/rem.html
@@ -10,15 +10,20 @@
         font-size: 100px;
     }
     .block1 {
-        width: 1em;
+        width: 1rem;
         background-color: red;
-        height: 1em;
+        height: 1rem;
+    }
+    .block2 {
+        width: 1rem;
+        background-color:green;
+        height: 1rem;
     }
 </style>
 <body>
     <div class="first">
         <div class="block1"></div>
     </div>
-    <div class="block"></div>
+    <div class="block2"></div>
 </body>
 </html>
