--- a/transform.html
+++ b/transform.html
@@ -10,13 +10,18 @@
         margin: 0;
     }
     .block {
-        width: 100px;
+        width: 200px;
         height: 100px;
+        background-color: green;
+
+    }
+    .test {
         background-color: red;
-        transform: translate(100px,100px);
+        transform: translate(100px,100px) rotate(45deg) scale(0.5,1.5);
     }
 </style>
 <body>
-    <div class="block"></div>
+    <div class="block test"></div> 
+    <div class="block"></div> 
 </body>
 </html>
