feat:learn transform

--- a/transform.html
+++ b/transform.html
@@ -19,9 +19,16 @@
         background-color: red;
         transform: translate(100px,100px) rotate(45deg) scale(0.5,1.5);
     }
+    .img {
+        width: 200px;
+        height: 200px;
+        
+    }
 </style>
 <body>
     <div class="block test"></div> 
     <div class="block"></div> 
+    <br>
+    <img src="https://cdn.pixabay.com/photo/2025/03/18/17/03/dog-9478487_1280.jpg" alt="">
 </body>
 </html>
