feat:learn transform

--- a/transform.html
+++ b/transform.html
@@ -23,6 +23,9 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
+        transition-property: transform;
+        transition-duration: 3s;
+        transition-timing-function: ease;
     }
 
     img:hover {
