feat:learn transform

--- a/transform.html
+++ b/transform.html
@@ -23,14 +23,14 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        transition-property: transform;
-        transition-duration: 3s;
-        transition-timing-function: ease;
+        /* transition-property: transform; */
+        transition-duration: 2s;
+        transition-timing-function: linear;
     }
 
     img:hover {
         cursor: pointer;
-        transform: rotate(360deg);
+        transform: translate(0,-20px) rotate(360deg);
     }
 </style>
 <body>
