feat:learn transform

--- a/transform.html
+++ b/transform.html
@@ -23,7 +23,7 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        /* transition-property: transform; */
+        transition-property: all;
         transition-duration: 2s;
         transition-timing-function: linear;
     }
