feat:learn transform

--- a/transform.html
+++ b/transform.html
@@ -19,7 +19,7 @@
         background-color: red;
         transform: translate(100px,100px) rotate(45deg) scale(0.5,1.5);
     }
-    img {
+    .first {
         width: 200px;
         height: 200px;
         border-radius: 50%;
@@ -28,15 +28,31 @@
         transition-timing-function: linear;
     }
 
-    img:hover {
+    .second {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+    }
+
+    .first:hover {
         cursor: pointer;
         transform: translate(0,-20px) rotate(360deg);
+    }
+    @keyframes circle {
+
+        0% {
+            transform: rotate(0deg);
+        }
+
+        
+        
     }
 </style>
 <body>
     <div class="block test"></div> 
     <div class="block"></div> 
     <br>
-    <img src="https://cdn.pixabay.com/photo/2025/03/18/17/03/dog-9478487_1280.jpg" alt="">
+    <img class="first" src="https://cdn.pixabay.com/photo/2025/03/18/17/03/dog-9478487_1280.jpg" alt="">
+    <img class="second" src="https://cdn.pixabay.com/photo/2025/03/18/17/03/dog-9478487_1280.jpg" alt="">
 </body>
 </html>
