--- a/transform.html
+++ b/transform.html
@@ -32,6 +32,7 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
+        animation: circle 3s linear infinite;
     }
 
     .first:hover {
@@ -44,7 +45,9 @@
             transform: rotate(0deg);
         }
 
-        
+        100% {
+            transform: rotate(360deg);
+        }
         
     }
 </style>
