--- a/transform.html
+++ b/transform.html
@@ -28,9 +28,29 @@
         transition-timing-function: linear;
     }
 
+    @media screen and (max-width : 500px) {
+        .second {
+            width: 60px;
+            height: 60px;
+        }
+    }
+
+    @media screen and (min-width:500px) and (max-width:1080px) {
+        .second {
+            width: 100px;
+            height: 100px;
+        }
+    }
+    @media screen and (min-width:1080px) {
+        .second {
+            width: 120px;
+            height: 120px;
+        }
+    }
+
     .second {
-        width: 200px;
-        height: 200px;
+        /* width: 200px;
+        height: 200px; */
         border-radius: 50%;
         animation: circle 3s linear infinite;
     }
