feat:learn sass

--- a/scss.html
+++ b/scss.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="dist/index.css">
 </head>
 <body>
-    <div class="test">hhhh</div>
+    <div class="test">
+        <p>teest</p>
+        <p>哈哈哈</p>
+    </div>
 </body>
 </html>
