feat:learn unocss

--- a/unocss.html
+++ b/unocss.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
 </head>
 <body>
-    <div class="w-[40px] h-8 bg-[red]">unocss体验1</div>
-    <div class="w-8 h-8 bg-black">unocss体验2</div>
+    <div class="w-[40px] h-[40px] bg-[red] hover:bg-[black]">unocss体验</div>
+  
 </body>
 </html>
